[package]
name = "ai-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for interacting with the 1min.ai API"
authors = ["AI CLI"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
keyring = "2.0"
dialoguer = "0.11"
anyhow = "1.0"
futures-util = "0.3"
